--- a/notes.org
+++ b/notes.org
@@ -28,6 +28,11 @@ Aggregate the sequences
 : scons -- settings-urogenital_named-2015-10-29.conf
 : scons -- settings-2017-03-30-vaginal-refset-ncbi-plus.conf
 
+output-gethits/ contains the output of classifications using the newer
+refset, and is generated using the following command:
+
+: scons get_hits=yes -- settings-2017-03-30-vaginal-refset-ncbi-plus.conf
+
 * compare output
 
 #+BEGIN_SRC R
