--- a/2017-04-03-project-trichomonas-refset-comparison.Rmd
+++ b/2017-04-03-project-trichomonas-refset-comparison.Rmd
@@ -106,7 +106,11 @@ knitr::kable(classifications[show,])
 
 ![Lactobacillus acidophilus/crispatus](figs-2017-07-06/acidophilus_crispatus.png)
 
-This seems like it should clearly be crispatus. I can't explain this classification.
+A closer look at a single placement (``sv-003``) using the "sing" tree
+showing the distribution of likelihoods explains the ambiguity between
+crispatus and acidophilus.
+
+![Lactobacillus acidophilus/crispatus](figs-2017-07-06/acidophilus_crispatus_sing.png)
 
 ## Sneathia (maybe amnii)
 
@@ -125,8 +129,6 @@ knitr::kable(classifications[show,])
 ```
 
 ![Shigella](figs-2017-07-06/shigella.png)
-
-This seems to be an overcall.
 
 # project info
 
