--- a/transhealth-analysis.Rmd
+++ b/transhealth-analysis.Rmd
@@ -55,7 +55,7 @@ pre code {
 ```
 
 ```{r setup}
-knitr::opts_chunk$set(cache=TRUE)
+## knitr::opts_chunk$set(cache=TRUE)
 options(width=150)
 ```
 
@@ -134,6 +134,8 @@ plot_heatmap(
         axis.text.y = element_text(size=12))
 ```
 
+Asterisks (*) indicate transmen on estrogen therapy.
+
 Generate taxon table at genus level
 
 ```{r}
@@ -141,7 +143,7 @@ by_genus <- phyloseq::tax_glom(phy2, taxrank="Genus")
 by_genus_rel <- phyloseq::transform_sample_counts(by_genus, function(x) x/sum(x))
 gtab <- data.frame(otu_table(by_genus_rel))
 rownames(gtab) <- tax_table(by_genus_rel)[,"Genus"]
-write.csv(gtab, file=gettextf('transhealth-by-genus-%s.csv', format(Sys.time(), '%Y-%m-%d')))
+write.csv(gtab, file='output/taxon_table_rel_genus.csv')
 ```
 
 # contrast using DESeq2
